# gst-webrtc-demo

./: .gitignore  CMakeLists.txt  README.md  build-gstreamer-for-android.md  build-gstreamer-from-source.md  build.gradle  common.sh  dot_to_image.sh  download_gst.sh  latency.md  raw-rtp-test.md  settings.gradle
android/: .gitignore  CMakeLists.txt  README.md  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/gst/webrtc_server/: StreamingActivity.kt
android/src/: CMakeLists.txt  main.cpp
android_client/: .gitignore  CMakeLists.txt  build.gradle  libraries_static.cmake  settings.gradle
android_client/app/: build.gradle
android_client/app/src/main/: AndroidManifest.xml
android_client/app/src/main/java/com/gst/webrtc/standalone_client/: StreamingActivity.kt  StreamingApplication.kt
android_client/app/src/main/res/values/: strings.xml
android_client/gstreamer_android/: CMakeLists.txt  gstreamer_android.c
android_client/gstreamer_java/: build.gradle
android_client/src/: CMakeLists.txt  EglData.cpp  EglData.hpp  main.cpp
android_client/src/em/: CMakeLists.txt  em_app_log.h  em_connection.c  em_status.h  em_stream_client.c  em_stream_client.h  gst_common.h
android_client/src/em/render/: GLDebug.cpp  GLError.cpp  GLSwapchain.cpp  GLSwapchain.h  render.cpp  render.hpp  xr_platform_deps.h
android_client/src/render/: CMakeLists.txt  GLDebug.cpp  GLError.cpp  GLSwapchain.cpp  render.cpp
android_client/src/webrtc/: CMakeLists.txt  connection.c  connection.h  stream_client.c  stream_client.h
android_client/src/webrtc/render/: GLDebug.cpp  GLError.cpp  GLSwapchain.cpp  render.cpp
android_server/: .gitignore  CMakeLists.txt  build.gradle
android_server/app/: build.gradle
android_server/app/src/main/: AndroidManifest.xml
android_server/app/src/main/java/com/gst/webrtc_server/: ScreenCaptureService.kt  StreamingActivity.kt  StreamingApplication.kt
android_server/gstreamer_android/: CMakeLists.txt  gstreamer_android.c
android_server/src/: CMakeLists.txt  main.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/gst/webrtc_server/: StreamingActivity.kt  StreamingApplication.kt
app/src/main/res/values/: strings.xml
gstreamer_android/: CMakeLists.txt  gstreamer_android.c
native/: CMakeLists.txt  main.c
native_client/: CMakeLists.txt  main.c
native_server/: CMakeLists.txt  main.c
src/: CMakeLists.txt  main.cpp
src/client/: client_pipeline.c  client_pipeline.h  connection.c  connection.h  gst_common.h  status.h  stream_client.c  stream_client.h
src/common/: app_log.h  custom_meta.c  custom_meta.h  general.c  general.h  probe.c  probe.h  webrtc_stats.c  webrtc_stats.h
src/ems/: CMakeLists.txt  ems_callbacks.cpp  ems_callbacks.h  ems_gstreamer_pipeline.c  ems_gstreamer_pipeline.h  ems_signaling_server.c  ems_signaling_server.h  u_generic_callbacks.hpp
src/server/: CMakeLists.txt  callbacks.cpp  callbacks.h  gstreamer_pipeline.c  gstreamer_pipeline.h  server_pipeline.c  server_pipeline.h  signaling_server.c  signaling_server.h
src/utils/: app_log.h  logger.h
